--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
     <h1>Andy Guillermo Arellano Anleu</h1>
+    <div id="container">
+        <h3>Bienvenido a mi blog.</h3>
+        <p>Este es el primer post de mi blog con el cual estoy aprendiendo a utilizar Git & Github.</p>
+    </div>
 </body>
 </html>
