Estructura inicial de la cabecera.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <body>
     <h1>Andy Guillermo Arellano Anleu</h1>
     <div id="container">
-        <h3>Bienvenido a mi blog.</h3>
+        <div id="cabecera">
+            <h3>Bienvenido a mi blog.</h3>
+        </div>
         <p>Este es el primer post de mi blog con el cual estoy aprendiendo a utilizar Git & Github.</p>
     </div>
 </body>
