--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Andy Guillermo Arellano Anleu</h1>
+    <div id="header">
+        <h1>Andy Guillermo Arellano Anleu</h1>
+    </div>
+    <br>
     <div id="container">
-        <div id="cabecera">
-            <h3>Bienvenido a mi blog.</h3>
-        </div>
+        <h3>Bienvenido a mi blog.</h3>
         <p>Este es el primer post de mi blog con el cual estoy aprendiendo a utilizar Git & Github.</p>
+    </div>
+    <br>
+    <div id="container">
+        <h3>Segundo post</h3>
+        <p>Este es el segundo post de mi blog con el cual estoy practicando.</p>
     </div>
 </body>
 </html>
