--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div id="container">
         <h3>Bienvenido a mi blog.</h3>
         <p>Este es el primer post de mi blog con el cual estoy aprendiendo a utilizar Git & Github.</p>
+        <p>Los blogs son la mejor forma de compartir información</p>
     </div>
 </body>
 </html>
