--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id="container">
         <h3>Bienvenido a mi blog.</h3>
         <p>Este es el primer post de mi blog con el cual estoy aprendiendo a utilizar Git & Github.</p>
-        <p>Los blogs son la mejor forma de compartir información</p>
+        <p>Ese esl el segundo parrafo del blog.</p>
+        <p>Este es el tercer parrafo del blog con el que estoy practicando.</p>
     </div>
     <br>
     <div id="container">
