Cambie el color del titulo y el segundo parrafo del primer post.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <h3>Bienvenido a mi blog.</h3>
         <p>Este es el primer post de mi blog con el cual estoy aprendiendo a utilizar Git & Github.</p>
-        <p>Los blogs son la mejor forma de compartir información</p>
+        <p>La información es super importante para poder aprender.</p>
     </div>
     <br>
     <div id="container">
